force-app/main/default/objects/Breeder__c/Breeder__c.object-meta.xml
<CustomObject>
    <description>Breeders we import animals from.</description>
    <label>Breeder</label>
    <nameField>
        <label>Breeder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Breeders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>