force-app/main/default/objects/Breeder__c/fields/Street_Adress__c.field-meta.xml
<CustomField>
    <fullName>Street_Adress__c</fullName>
    <label>Street Adress</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>