force-app/main/default/objects/Breeder__c/fields/Types_of_Animals__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Animals__c</fullName>
    <label>Types of Animals</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dogs</fullName>
            </value>
            <value>
                <fullName>Cats</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>Birds</fullName>
            </value>
            <value>
                <fullName>Reptiles</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>